fix translate post merge

--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -74,7 +74,7 @@
 <ng-template #template>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Aggiungi "{{couponPass.title.length > 20 ? couponPass.title.substring(0, 20) + '...' :
-      couponPass.title}}" to shopping cart</h4>
+      couponPass.title}}" al carrello</h4>
     <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
