--- a/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
@@ -22,7 +22,7 @@
               </div>
 
               <div class="col-lg-2 col-md-2 col-sm-2 text-center">
-                <h5>o</h5>
+                <h5>oppure </h5>
               </div>
 
               <div class="w-100 d-lg-none d-md-block d-none"></div> <!-- It forces the button Scan to go in a new row with the md view -->
