--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -30,10 +30,10 @@
 
 
       <td>
-        <button type="button" class="btn btn-primary" (click)="onCopy(coupon)"><i class="far fa-copy"></i> Copy</button>
+        <button type="button" class="btn btn-primary" (click)="onCopy(coupon)"><i class="far fa-copy"></i> Copia</button>
       </td>
       <td>
-        <button type="button" class="btn btn-info text-white" (click)="onEdit(coupon)"><i class="fas fa-edit"></i> Edit
+        <button type="button" class="btn btn-info text-white" (click)="onEdit(coupon)"><i class="fas fa-edit"></i> Modifica
         </button>
       </td>
       <td>
@@ -96,16 +96,16 @@
         <div class="btn-group" dropdown>
           <button id="action-button" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                   aria-controls="action-button">
-            Action <span class="caret"></span>
+            Azioni <span class="caret"></span>
           </button>
           <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
               aria-labelledby="action-button">
             <li role="menuitem"><a class="dropdown-item" (click)="onCopy(coupon)"><i
-              class="far fa-copy text-primary"></i> Copy</a></li>
+              class="far fa-copy text-primary"></i> Copia</a></li>
             <li role="menuitem"><a class="dropdown-item" (click)="onEdit(coupon)"><i class="fas fa-edit text-info"></i>
               Modifica</a></li>
             <li role="menuitem"><a class="dropdown-item" (click)="openModal(template, coupon)"><i
-              class="fas fa-trash-alt text-danger"></i> Delete</a></li>
+              class="fas fa-trash-alt text-danger"></i> Elimina</a></li>
           </ul>
         </div>
       </td>
@@ -143,12 +143,12 @@
         <div class="btn-group" dropdown>
           <button id="action-button-2" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
                   aria-controls="action-button-2">
-            Action <span class="caret"></span>
+            Azioni <span class="caret"></span>
           </button>
           <ul id="dropdown-basic-2" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
               aria-labelledby="action-button-2">
             <li role="menuitem"><a class="dropdown-item" (click)="onCopy(coupon)"><i
-              class="far fa-copy text-primary"></i> Copy</a></li>
+              class="far fa-copy text-primary"></i> Copia</a></li>
             <li role="menuitem"><a class="dropdown-item" (click)="onEdit(coupon)"><i
               class="fas fa-edit text-primary"></i> Modifica</a></li>
             <li role="menuitem"><a class="dropdown-item" (click)="openModal(template, coupon)"><i
