--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -48,9 +48,9 @@
           </a>
         </div>
 
-        <a class="list-group-item list-group-item-action">
-          <span class="menu-collapsed text-secondary">Altro da Aggiungere</span>
-        </a>
+        <!--<a class="list-group-item list-group-item-action">-->
+          <!--<span class="menu-collapsed text-secondary">Altro da Aggiungere</span>-->
+        <!--</a>-->
       </div>
 
       <div *ngIf="this.userType != '3'">
@@ -75,7 +75,7 @@
         </div>
       </div>
       <li class="list-group-item sidebar-separator menu-collapsed"></li>
-      <a class="list-group-item list-group-item-action">
+<!--      <a class="list-group-item list-group-item-action">
         <div class="d-flex w-100 justify-content-start align-items-center">
           <span class="fa fa-question fa-fw mr-3"></span>
           <span class="menu-collapsed text-secondary">Aiuto</span>
@@ -87,7 +87,7 @@
           <span id="collapse-icon" class="fa fa-arrow-left fa-fw mr-3"></span>
           <span id="collapse-text" class="menu-collapsed text-secondary">Riduci</span>
         </div>
-      </a>
+      </a>-->
     </ul>
   </div>
 </div>
