--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -76,14 +76,12 @@
                 </div>
               </div>
 
-              <a class="list-group-item list-group-item-action ">
+<!--              <a class="list-group-item list-group-item-action ">
                 <div class="d-flex w-100 justify-content-start align-items-center">
                   <span class="fa fa-question fa-fw mr-3"></span>
                   <span class="menu-collapsed text-secondary">Aiuto</span>
                 </div>
-              </a>
-
-
+              </a>-->
 
             </div>
           </li>
