--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
@@ -1,3 +1,11 @@
+@media only screen and (max-width: 768px) {
+  .btn-retry {
+    font-size:15px;
+    min-width: 150px;
+  }
+}
+
+
 .btn-retry {
   margin: 0 auto;
   padding: 13px;
@@ -11,8 +19,7 @@
   margin: 0 auto;
   padding: 13px;
   width: 20%;
-  font-size:15px;
-  min-width: 150px;
+
 }
 
 .crop {
