--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <!--<div style="padding-top: 20%" *ngIf="!hide || desktopMode " >-->
-<div class="padding-header" *ngIf="desktopMode " > <!-- TODO to move to features the desktopMode -->
+<div class="padding-header sticky-top" *ngIf="desktopMode " > <!-- TODO to move to features the desktopMode -->
   <div  id="sidebar-container"  class="sidebar-expanded  col-1-5 " *ngIf="isUserLoggedIn">
 
     <ul class="list-group sticky-top sticky-offset">
