Enhancement of coupon import

--- a/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.html
@@ -52,11 +52,10 @@
               </div>
 
 
-            <div class="row">
+            <div class="row bg-secondary mb-4">
               <zxing-scanner
                 #scanner style="padding-bottom: 1em" class="test-class" start="true" [device]="selectedDevice"
                 (scanSuccess)="handleQrCodeResult($event)">
-
               </zxing-scanner>
             </div>
 
