--- a/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-import/coupon-import.component.scss
@@ -4,12 +4,10 @@
   font-size: 16px;
 }
 
-
-
 .btn-redeems {
   margin-inside: 10% auto;
-  //padding: 13%;
-  //width: 20%;
-  //font-size:18px;
-  //min-width: 200px;
+}
+
+.bg-hover:hover {
+  background-color: lightgray!important;
 }
