--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.scss
@@ -1,17 +1,17 @@
 @media only screen and (max-width: 768px) {
   .btn-retry {
-    font-size:15px;
-    min-width: 150px;
+    font-size: 14px!important;
+    width: auto;
+    //min-width: 130px!important;
   }
 }
-
 
 .btn-retry {
   margin: 0 auto;
   padding: 13px;
-  width: 20%;
+  width: auto;
   font-size:18px;
-  min-width: 200px;
+  //min-width: 160px;
 }
 
 
@@ -19,7 +19,6 @@
   margin: 0 auto;
   padding: 13px;
   width: 20%;
-
 }
 
 .crop {
